Fix font-family portability
Font-family was not showing up in github pages

--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 @import url(node_modules/normalize.css/normalize.css);
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Skranji:wght@400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Skranji:wght@400;700&display=swap'); */
+/* @import url('./Skranji/Skranji-Bold.ttf');
+@import url('./Skranji/Skranji-Regular.ttf'); */
+
+@font-face {
+  font-family: Skranji;
+  src: url('./Skranji/Skranji-Regular.ttf'),
+  url('./Skranji/Skranji-Bold.ttf');
+}
 
 *::before,
 *::after,
@@ -7,7 +15,7 @@
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
-  font-family: "Skranji", sans-serif;
+  font-family: Skranji, sans-serif;
   text-shadow: 0px 0px 8px lightgray;
 }
 
@@ -35,7 +43,7 @@ header {
   align-items: center;
   padding-left: 100px;
   padding-right: 100px;
-  font-weight: 700;
+  font-weight: bold;
 }
 
 main {
@@ -43,7 +51,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-weight: 400;
+  font-weight: normal;
 }
 
 main > button {
@@ -142,6 +150,6 @@ h2 {
 footer {
   display: flex;
   justify-content: center;
-  font-weight: 400;
+  font-weight: normal;
   padding-bottom: 16px;
 }
